--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -251,7 +251,7 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "\u001b[1m178/391\u001b[0m \u001b[32m━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━\u001b[0m \u001b[1m8:47\u001b[0m 2s/step - accuracy: 0.5912 - loss: 0.6599"
+            "\u001b[1m247/391\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m5:55\u001b[0m 2s/step - accuracy: 0.6198 - loss: 0.6332"
           ]
         }
       ]
@@ -264,7 +264,7 @@
         "print(f'Test Accuracy: {accuracy:.4f}')\n"
       ],
       "metadata": {
-        "id": "-xUEz427nN9Q"
+        "id": "b4_Mo3pXpGiI"
       },
       "execution_count": null,
       "outputs": []
