--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G7k8hTlKmzMZ",
-        "outputId": "1f2bfae1-3708-4971-cc94-c93da4c19444"
+        "outputId": "2022bc2c-1d8b-4b9f-ea26-a3fc07b03e95"
       },
       "execution_count": 2,
       "outputs": [
@@ -108,7 +108,7 @@
           "height": 424
         },
         "id": "THohAY-_m5U4",
-        "outputId": "ba6480f9-e60c-474a-f5c5-471ea75f8045"
+        "outputId": "383d69e0-53c9-49fc-edc1-3a971080d7e8"
       },
       "execution_count": 3,
       "outputs": [
@@ -242,16 +242,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2SG8Hi_1nCk3",
-        "outputId": "b918a45d-7401-431d-efeb-c3fcc08d8695"
+        "outputId": "8578f111-7b2b-4da9-bd86-d138aa4fc4ed"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "\u001b[1m247/391\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m5:55\u001b[0m 2s/step - accuracy: 0.6198 - loss: 0.6332"
+            "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1136s\u001b[0m 3s/step - accuracy: 0.6652 - loss: 0.5907 - val_accuracy: 0.8347 - val_loss: 0.3889 - learning_rate: 0.0010\n",
+            "Epoch 2/5\n",
+            "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1170s\u001b[0m 3s/step - accuracy: 0.8723 - loss: 0.3172 - val_accuracy: 0.8282 - val_loss: 0.4308 - learning_rate: 0.0010\n",
+            "Epoch 3/5\n",
+            "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1207s\u001b[0m 3s/step - accuracy: 0.9000 - loss: 0.2521 - val_accuracy: 0.6012 - val_loss: 1.3158 - learning_rate: 0.0010\n",
+            "Epoch 4/5\n",
+            "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1168s\u001b[0m 3s/step - accuracy: 0.8480 - loss: 0.3513 - val_accuracy: 0.8466 - val_loss: 0.4063 - learning_rate: 2.0000e-04\n"
           ]
         }
       ]
@@ -264,10 +270,23 @@
         "print(f'Test Accuracy: {accuracy:.4f}')\n"
       ],
       "metadata": {
-        "id": "b4_Mo3pXpGiI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b4_Mo3pXpGiI",
+        "outputId": "24644e3b-0e11-4f5d-c415-f25378eab529"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m346s\u001b[0m 443ms/step - accuracy: 0.8358 - loss: 0.3880\n",
+            "Test Accuracy: 0.8347\n"
+          ]
+        }
+      ]
     }
   ]
 }
